--- a/notebooks/xgb_ensemble-all.ipynb
+++ b/notebooks/xgb_ensemble-all.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -45,51 +45,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "../features/other_feat.pkl\n",
-      "../features/vgg16_1_feat.pkl\n",
-      "../features/cnn_1_aug1_feat.pkl\n",
-      "../features/cnn_2_aug2_feat.pkl\n",
-      "../features/incept_aug1_feat.pkl\n",
-      "../features/resnet_aug2_feat.pkl\n",
-      "../features/cnn_4_aug2_feat.pkl\n",
-      "(1604, 17) (8424, 17) (1604,)\n"
+      "(1604, 29) (8424, 29) (1604,)\n"
      ]
     }
    ],
    "source": [
-    "choose_fl = [\n",
-    "'../features/other_feat.pkl',\n",
-    "'../features/vgg16_1_feat.pkl',\n",
-    "#'../features/cnn_1_feat.pkl',\n",
-    "'../features/cnn_1_aug1_feat.pkl',\n",
-    "#'../features/resnet_1_feat.pkl',\n",
-    "#'../features/cnn_2_aug1_feat_new_preprocess.pkl',\n",
-    "#'../features/cnn_2_aug1_feat.pkl',\n",
-    "#'../features/cnn_2_feat.pkl',\n",
-    "#'../features/cnn_2_feat_adjust.pkl',\n",
-    "#'../features/incept_1_feat.pkl',\n",
-    "'../features/cnn_2_aug2_feat.pkl',\n",
-    "#'../features/resnet_aug1_feat.pkl',\n",
-    "#'../features/vgg_aug1_feat.pkl',\n",
-    "'../features/incept_aug1_feat.pkl',\n",
-    "#'../features/incept_aug2_feat.pkl'\n",
-    "#'../features/cnn_3_aug2_feat.pkl'\n",
-    "'../features/resnet_aug2_feat.pkl',\n",
-    "'../features/cnn_4_aug2_feat.pkl',\n",
-    "#'../features/cnn_4_aug1_feat.pkl'\n",
-    "]\n",
-    "\n",
     "def load_x_y():\n",
     "    train_x,test_x=[],[]\n",
-    "    for f in choose_fl:\n",
-    "        print(f)\n",
+    "    for f in fl:\n",
     "        with open(f,'rb') as fin:\n",
     "            a,b = pickle.load(fin)\n",
     "            train_x.append(a)\n",
@@ -106,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +140,7 @@
     "        submission['id']=test_df['id']\n",
     "        submission['is_iceberg']=test_pred\n",
     "        print(submission.head())\n",
-    "        submission.to_csv('../results/xgb_sub.csv', index=False)\n",
+    "        submission.to_csv('../results/all_xgb_ens_sub.csv', index=False)\n",
     "\n",
     "    \n",
     "print('def done')"
@@ -178,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 24,
    "metadata": {
     "scrolled": false
    },
@@ -187,57 +157,55 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0]\ttrain-logloss:0.63991\tvalid-logloss:0.640629\n",
+      "[0]\ttrain-logloss:0.640042\tvalid-logloss:0.642126\n",
       "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
       "\n",
       "Will train until valid-logloss hasn't improved in 30 rounds.\n",
-      "[100]\ttrain-logloss:0.088423\tvalid-logloss:0.157868\n",
+      "[100]\ttrain-logloss:0.086096\tvalid-logloss:0.156393\n",
       "Stopping. Best iteration:\n",
-      "[98]\ttrain-logloss:0.089674\tvalid-logloss:0.156652\n",
+      "[101]\ttrain-logloss:0.085634\tvalid-logloss:0.155999\n",
       "\n",
-      "[0]\ttrain-logloss:0.64205\tvalid-logloss:0.638257\n",
+      "[0]\ttrain-logloss:0.641179\tvalid-logloss:0.63845\n",
       "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
       "\n",
       "Will train until valid-logloss hasn't improved in 30 rounds.\n",
-      "[100]\ttrain-logloss:0.103817\tvalid-logloss:0.089846\n",
-      "[200]\ttrain-logloss:0.060874\tvalid-logloss:0.074674\n",
-      "[300]\ttrain-logloss:0.038764\tvalid-logloss:0.067539\n",
-      "[400]\ttrain-logloss:0.026554\tvalid-logloss:0.064678\n",
+      "[100]\ttrain-logloss:0.096896\tvalid-logloss:0.099025\n",
+      "[200]\ttrain-logloss:0.050041\tvalid-logloss:0.087509\n",
+      "[300]\ttrain-logloss:0.029917\tvalid-logloss:0.084156\n",
       "Stopping. Best iteration:\n",
-      "[381]\ttrain-logloss:0.028774\tvalid-logloss:0.064596\n",
+      "[336]\ttrain-logloss:0.025262\tvalid-logloss:0.082671\n",
       "\n",
-      "[0]\ttrain-logloss:0.640049\tvalid-logloss:0.643524\n",
+      "[0]\ttrain-logloss:0.63927\tvalid-logloss:0.643324\n",
       "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
       "\n",
       "Will train until valid-logloss hasn't improved in 30 rounds.\n",
-      "[100]\ttrain-logloss:0.091347\tvalid-logloss:0.139773\n",
-      "[200]\ttrain-logloss:0.051394\tvalid-logloss:0.136023\n",
+      "[100]\ttrain-logloss:0.083739\tvalid-logloss:0.153239\n",
       "Stopping. Best iteration:\n",
-      "[191]\ttrain-logloss:0.054342\tvalid-logloss:0.134337\n",
+      "[128]\ttrain-logloss:0.067715\tvalid-logloss:0.145371\n",
       "\n",
-      "[0]\ttrain-logloss:0.640858\tvalid-logloss:0.644545\n",
+      "[0]\ttrain-logloss:0.638706\tvalid-logloss:0.643772\n",
       "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
       "\n",
       "Will train until valid-logloss hasn't improved in 30 rounds.\n",
-      "[100]\ttrain-logloss:0.083981\tvalid-logloss:0.198471\n",
+      "[100]\ttrain-logloss:0.077281\tvalid-logloss:0.207163\n",
       "Stopping. Best iteration:\n",
-      "[118]\ttrain-logloss:0.073917\tvalid-logloss:0.194678\n",
+      "[117]\ttrain-logloss:0.067173\tvalid-logloss:0.20559\n",
       "\n",
-      "[0]\ttrain-logloss:0.641126\tvalid-logloss:0.644035\n",
+      "[0]\ttrain-logloss:0.639972\tvalid-logloss:0.642274\n",
       "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
       "\n",
       "Will train until valid-logloss hasn't improved in 30 rounds.\n",
-      "[100]\ttrain-logloss:0.085044\tvalid-logloss:0.183416\n",
+      "[100]\ttrain-logloss:0.077236\tvalid-logloss:0.184874\n",
       "Stopping. Best iteration:\n",
-      "[77]\ttrain-logloss:0.099817\tvalid-logloss:0.182249\n",
+      "[80]\ttrain-logloss:0.090547\tvalid-logloss:0.182505\n",
       "\n",
-      "local average valid loss 0.148525893474\n",
+      "local average valid loss 0.156802353807\n",
       "         id  is_iceberg\n",
-      "0  5941774d    0.016074\n",
-      "1  4023181e    0.849510\n",
-      "2  b20200e4    0.004522\n",
-      "3  e7f018bb    0.998180\n",
-      "4  4371c8c3    0.084590\n"
+      "0  5941774d    0.013395\n",
+      "1  4023181e    0.803265\n",
+      "2  b20200e4    0.020527\n",
+      "3  e7f018bb    0.997600\n",
+      "4  4371c8c3    0.106976\n"
      ]
     }
    ],
