rm simple notebooks

--- a/notebooks/xgb_ensemble-all.ipynb
+++ b/notebooks/xgb_ensemble-all.ipynb
@@ -2,32 +2,32 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "'../features/vgg16_1_feat.pkl'\n",
-      "'../features/cnn_1_feat.pkl'\n",
-      "'../features/resnet_aug1_feat.pkl'\n",
-      "'../features/incept_aug1_feat.pkl'\n",
-      "'../features/other_feat.pkl'\n",
-      "'../features/incept_aug2_feat.pkl'\n",
       "'../features/cnn_1_aug1_feat.pkl'\n",
-      "'../features/resnet_1_feat.pkl'\n",
-      "'../features/cnn_2_aug1_feat_new_preprocess.pkl'\n",
+      "'../features/cnn_1_feat.pkl'\n",
       "'../features/cnn_2_aug1_feat.pkl'\n",
       "'../features/cnn_2_feat.pkl'\n",
+      "'../features/cnn_3_aug1_feat.pkl'\n",
       "'../features/cnn_4_aug1_feat.pkl'\n",
-      "'../features/cnn_2_feat_adjust.pkl'\n",
+      "'../features/cnn_4_aug1_feat_add_early.pkl'\n",
+      "'../features/cnn_5_aug1_feat.pkl'\n",
       "'../features/incept_1_feat.pkl'\n",
-      "'../features/vgg_aug1_feat.pkl'\n",
+      "'../features/incept_aug1_feat.pkl'\n",
+      "'../features/incept_aug2_feat.pkl'\n",
+      "'../features/incept_aug3_feat.pkl'\n",
+      "'../features/other_feat.pkl'\n",
+      "'../features/resnet_1_feat.pkl'\n",
+      "'../features/resnet_aug1_feat.pkl'\n",
       "'../features/resnet_aug2_feat.pkl'\n",
-      "'../features/cnn_2_aug2_feat.pkl'\n",
-      "'../features/cnn_3_aug2_feat.pkl'\n",
-      "'../features/cnn_4_aug2_feat.pkl'\n"
+      "'../features/resnet_aug3_feat.pkl'\n",
+      "'../features/vgg16_1_feat.pkl'\n",
+      "'../features/vgg_aug1_feat.pkl'\n"
      ]
     }
    ],
@@ -38,14 +38,14 @@
     "import glob\n",
     "import pandas as pd\n",
     "\n",
-    "fl = glob.glob('../features/*.pkl')\n",
-    "for l in fl:\n",
+    "fl = list(glob.glob('../features/*.pkl'))\n",
+    "for l in sorted(fl):\n",
     "    print(\"'{}'\".format(l))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -92,8 +92,11 @@
     "from sklearn.metrics import log_loss\n",
     "def cv_test(k_cnt=3,rnd=42,save_flag=False):\n",
     "    kf = StratifiedKFold(n_splits=k_cnt, shuffle=True, random_state=rnd*2)\n",
+    "    w_test_pred = None\n",
+    "    r_val_loss = 0\n",
     "    test_pred = None\n",
     "    val_loss = 0\n",
+    "    val_loss_list = []\n",
     "    for train_index, test_index in kf.split(train_x,train_y):\n",
     "        X_train, X_test = train_x[train_index], train_x[test_index]\n",
     "        y_train, y_test = train_y[train_index], train_y[test_index]\n",
@@ -121,26 +124,39 @@
     "                        verbose_eval=100)\n",
     "        \n",
     "        # cal val loss\n",
-    "        val_loss += log_loss(y_test,m.predict(d_valid))/k_cnt\n",
+    "        curr_val_loss = log_loss(y_test,m.predict(d_valid))\n",
+    "        val_loss += curr_val_loss/k_cnt\n",
+    "        val_loss_list.append(curr_val_loss)\n",
+    "        curr_r_val_loss = 1.0 / curr_val_loss\n",
+    "        r_val_loss += curr_r_val_loss\n",
     "        \n",
     "        if test_pred is None:\n",
     "            test_pred = m.predict(d_test)\n",
+    "            w_test_pred = m.predict(d_test)*curr_r_val_loss\n",
     "        else:\n",
     "            curr_pred = m.predict(d_test)\n",
     "            test_pred += curr_pred\n",
+    "            w_test_pred = w_test_pred + curr_pred*curr_r_val_loss\n",
     "\n",
     "    # avg\n",
     "    test_pred = test_pred / k_cnt\n",
+    "    w_test_pred = w_test_pred / r_val_loss\n",
     "    \n",
     "    # train log loss\n",
-    "    print('local average valid loss',val_loss)\n",
+    "    print('local average valid loss',val_loss,'val loss std',np.std(val_loss_list))\n",
     "    if save_flag:\n",
     "        test_df=pd.read_json('../input/test.json')\n",
     "        submission = pd.DataFrame()\n",
     "        submission['id']=test_df['id']\n",
     "        submission['is_iceberg']=test_pred\n",
     "        print(submission.head())\n",
-    "        submission.to_csv('../results/all_xgb_ens_sub.csv', index=False)\n",
+    "        submission.to_csv('../results/all_xgb_sub_fold_{}_rnd_{}.csv'.format(k_cnt,rnd), index=False)\n",
+    "        \n",
+    "        submission = pd.DataFrame()\n",
+    "        submission['id']=test_df['id']\n",
+    "        submission['is_iceberg']=w_test_pred\n",
+    "        print(submission.head())\n",
+    "        submission.to_csv('../results/weighted_all_xgb_sub_fold_{}_rnd_{}.csv'.format(k_cnt,rnd), index=False)\n",
     "\n",
     "    \n",
     "print('def done')"
@@ -148,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "metadata": {
     "scrolled": false
    },
@@ -157,60 +173,136 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0]\ttrain-logloss:0.640042\tvalid-logloss:0.642126\n",
+      "[0]\ttrain-logloss:0.640042\tvalid-logloss:0.64132\n",
       "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
       "\n",
       "Will train until valid-logloss hasn't improved in 30 rounds.\n",
-      "[100]\ttrain-logloss:0.086096\tvalid-logloss:0.156393\n",
+      "[100]\ttrain-logloss:0.085731\tvalid-logloss:0.150959\n",
       "Stopping. Best iteration:\n",
-      "[101]\ttrain-logloss:0.085634\tvalid-logloss:0.155999\n",
+      "[106]\ttrain-logloss:0.081826\tvalid-logloss:0.150418\n",
       "\n",
-      "[0]\ttrain-logloss:0.641179\tvalid-logloss:0.63845\n",
+      "[0]\ttrain-logloss:0.640553\tvalid-logloss:0.638461\n",
       "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
       "\n",
       "Will train until valid-logloss hasn't improved in 30 rounds.\n",
-      "[100]\ttrain-logloss:0.096896\tvalid-logloss:0.099025\n",
-      "[200]\ttrain-logloss:0.050041\tvalid-logloss:0.087509\n",
-      "[300]\ttrain-logloss:0.029917\tvalid-logloss:0.084156\n",
+      "[100]\ttrain-logloss:0.095044\tvalid-logloss:0.107113\n",
+      "[200]\ttrain-logloss:0.049733\tvalid-logloss:0.096345\n",
+      "[300]\ttrain-logloss:0.029752\tvalid-logloss:0.092553\n",
       "Stopping. Best iteration:\n",
-      "[336]\ttrain-logloss:0.025262\tvalid-logloss:0.082671\n",
+      "[363]\ttrain-logloss:0.0228\tvalid-logloss:0.089514\n",
       "\n",
-      "[0]\ttrain-logloss:0.63927\tvalid-logloss:0.643324\n",
+      "[0]\ttrain-logloss:0.639406\tvalid-logloss:0.643287\n",
       "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
       "\n",
       "Will train until valid-logloss hasn't improved in 30 rounds.\n",
-      "[100]\ttrain-logloss:0.083739\tvalid-logloss:0.153239\n",
+      "[100]\ttrain-logloss:0.084865\tvalid-logloss:0.15522\n",
       "Stopping. Best iteration:\n",
-      "[128]\ttrain-logloss:0.067715\tvalid-logloss:0.145371\n",
+      "[146]\ttrain-logloss:0.061016\tvalid-logloss:0.149694\n",
       "\n",
-      "[0]\ttrain-logloss:0.638706\tvalid-logloss:0.643772\n",
+      "[0]\ttrain-logloss:0.638513\tvalid-logloss:0.644778\n",
       "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
       "\n",
       "Will train until valid-logloss hasn't improved in 30 rounds.\n",
-      "[100]\ttrain-logloss:0.077281\tvalid-logloss:0.207163\n",
+      "[100]\ttrain-logloss:0.075919\tvalid-logloss:0.210096\n",
       "Stopping. Best iteration:\n",
-      "[117]\ttrain-logloss:0.067173\tvalid-logloss:0.20559\n",
+      "[104]\ttrain-logloss:0.073728\tvalid-logloss:0.207897\n",
       "\n",
-      "[0]\ttrain-logloss:0.639972\tvalid-logloss:0.642274\n",
+      "[0]\ttrain-logloss:0.640215\tvalid-logloss:0.643263\n",
       "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
       "\n",
       "Will train until valid-logloss hasn't improved in 30 rounds.\n",
-      "[100]\ttrain-logloss:0.077236\tvalid-logloss:0.184874\n",
+      "[100]\ttrain-logloss:0.079411\tvalid-logloss:0.182036\n",
       "Stopping. Best iteration:\n",
-      "[80]\ttrain-logloss:0.090547\tvalid-logloss:0.182505\n",
+      "[78]\ttrain-logloss:0.094687\tvalid-logloss:0.181436\n",
       "\n",
-      "local average valid loss 0.156802353807\n",
+      "local average valid loss 0.157322195894 val loss std 0.0396900553041\n",
       "         id  is_iceberg\n",
-      "0  5941774d    0.013395\n",
-      "1  4023181e    0.803265\n",
-      "2  b20200e4    0.020527\n",
-      "3  e7f018bb    0.997600\n",
-      "4  4371c8c3    0.106976\n"
+      "0  5941774d    0.018407\n",
+      "1  4023181e    0.864245\n",
+      "2  b20200e4    0.049624\n",
+      "3  e7f018bb    0.998522\n",
+      "4  4371c8c3    0.120860\n",
+      "         id  is_iceberg\n",
+      "0  5941774d    0.016861\n",
+      "1  4023181e    0.872074\n",
+      "2  b20200e4    0.057109\n",
+      "3  e7f018bb    0.998686\n",
+      "4  4371c8c3    0.119924\n"
      ]
     }
    ],
    "source": [
     "cv_test(5,233,True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0]\ttrain-logloss:0.638593\tvalid-logloss:0.642662\n",
+      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
+      "\n",
+      "Will train until valid-logloss hasn't improved in 30 rounds.\n",
+      "[100]\ttrain-logloss:0.080479\tvalid-logloss:0.17592\n",
+      "Stopping. Best iteration:\n",
+      "[120]\ttrain-logloss:0.068915\tvalid-logloss:0.175046\n",
+      "\n",
+      "[0]\ttrain-logloss:0.639811\tvalid-logloss:0.643053\n",
+      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
+      "\n",
+      "Will train until valid-logloss hasn't improved in 30 rounds.\n",
+      "[100]\ttrain-logloss:0.086819\tvalid-logloss:0.148765\n",
+      "[200]\ttrain-logloss:0.046474\tvalid-logloss:0.140681\n",
+      "Stopping. Best iteration:\n",
+      "[231]\ttrain-logloss:0.039025\tvalid-logloss:0.139519\n",
+      "\n",
+      "[0]\ttrain-logloss:0.639192\tvalid-logloss:0.641799\n",
+      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
+      "\n",
+      "Will train until valid-logloss hasn't improved in 30 rounds.\n",
+      "[100]\ttrain-logloss:0.082562\tvalid-logloss:0.197983\n",
+      "Stopping. Best iteration:\n",
+      "[72]\ttrain-logloss:0.10018\tvalid-logloss:0.196842\n",
+      "\n",
+      "[0]\ttrain-logloss:0.640642\tvalid-logloss:0.641553\n",
+      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
+      "\n",
+      "Will train until valid-logloss hasn't improved in 30 rounds.\n",
+      "[100]\ttrain-logloss:0.086455\tvalid-logloss:0.157605\n",
+      "Stopping. Best iteration:\n",
+      "[113]\ttrain-logloss:0.079137\tvalid-logloss:0.154515\n",
+      "\n",
+      "[0]\ttrain-logloss:0.640437\tvalid-logloss:0.642039\n",
+      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
+      "\n",
+      "Will train until valid-logloss hasn't improved in 30 rounds.\n",
+      "[100]\ttrain-logloss:0.08538\tvalid-logloss:0.163915\n",
+      "Stopping. Best iteration:\n",
+      "[82]\ttrain-logloss:0.096481\tvalid-logloss:0.16227\n",
+      "\n",
+      "local average valid loss 0.168410517084 val loss std 0.0183947082158\n",
+      "         id  is_iceberg\n",
+      "0  5941774d    0.020507\n",
+      "1  4023181e    0.885462\n",
+      "2  b20200e4    0.057458\n",
+      "3  e7f018bb    0.997676\n",
+      "4  4371c8c3    0.110026\n",
+      "         id  is_iceberg\n",
+      "0  5941774d    0.020809\n",
+      "1  4023181e    0.887769\n",
+      "2  b20200e4    0.060703\n",
+      "3  e7f018bb    0.997791\n",
+      "4  4371c8c3    0.114359\n"
+     ]
+    }
+   ],
+   "source": [
+    "cv_test(5,42,True)"
    ]
   }
  ],
