--- a/notebooks/xgb_ensemble.ipynb
+++ b/notebooks/xgb_ensemble.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -17,17 +17,17 @@
       "'../features/incept_aug2_feat.pkl'\n",
       "'../features/cnn_1_aug1_feat.pkl'\n",
       "'../features/resnet_1_feat.pkl'\n",
-      "'../features/cnn_2_aug1_feat_new_preprocess.pkl'\n",
+      "'../features/cnn_3_aug1_feat.pkl'\n",
       "'../features/cnn_2_aug1_feat.pkl'\n",
       "'../features/cnn_2_feat.pkl'\n",
       "'../features/cnn_4_aug1_feat.pkl'\n",
-      "'../features/cnn_2_feat_adjust.pkl'\n",
+      "'../features/cnn_4_aug1_feat_add_early.pkl'\n",
+      "'../features/cnn_5_aug1_feat.pkl'\n",
       "'../features/incept_1_feat.pkl'\n",
+      "'../features/resnet_aug3_feat.pkl'\n",
+      "'../features/incept_aug3_feat.pkl'\n",
       "'../features/vgg_aug1_feat.pkl'\n",
-      "'../features/resnet_aug2_feat.pkl'\n",
-      "'../features/cnn_2_aug2_feat.pkl'\n",
-      "'../features/cnn_3_aug2_feat.pkl'\n",
-      "'../features/cnn_4_aug2_feat.pkl'\n"
+      "'../features/resnet_aug2_feat.pkl'\n"
      ]
     }
    ],
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -53,37 +53,32 @@
      "output_type": "stream",
      "text": [
       "../features/other_feat.pkl\n",
-      "../features/vgg16_1_feat.pkl\n",
       "../features/cnn_1_aug1_feat.pkl\n",
-      "../features/cnn_2_aug2_feat.pkl\n",
-      "../features/incept_aug1_feat.pkl\n",
-      "../features/resnet_aug2_feat.pkl\n",
-      "../features/cnn_4_aug2_feat.pkl\n",
-      "(1604, 17) (8424, 17) (1604,)\n"
+      "../features/cnn_2_aug1_feat.pkl\n",
+      "../features/cnn_3_aug1_feat.pkl\n",
+      "../features/cnn_4_aug1_feat.pkl\n",
+      "../features/cnn_4_aug1_feat_add_early.pkl\n",
+      "../features/cnn_5_aug1_feat.pkl\n",
+      "../features/vgg_aug1_feat.pkl\n",
+      "../features/incept_aug2_feat.pkl\n",
+      "../features/resnet_aug3_feat.pkl\n",
+      "(1604, 20) (8424, 20) (1604,)\n"
      ]
     }
    ],
    "source": [
     "choose_fl = [\n",
     "'../features/other_feat.pkl',\n",
-    "'../features/vgg16_1_feat.pkl',\n",
-    "#'../features/cnn_1_feat.pkl',\n",
     "'../features/cnn_1_aug1_feat.pkl',\n",
-    "#'../features/resnet_1_feat.pkl',\n",
-    "#'../features/cnn_2_aug1_feat_new_preprocess.pkl',\n",
-    "#'../features/cnn_2_aug1_feat.pkl',\n",
-    "#'../features/cnn_2_feat.pkl',\n",
-    "#'../features/cnn_2_feat_adjust.pkl',\n",
-    "#'../features/incept_1_feat.pkl',\n",
-    "'../features/cnn_2_aug2_feat.pkl',\n",
-    "#'../features/resnet_aug1_feat.pkl',\n",
-    "#'../features/vgg_aug1_feat.pkl',\n",
-    "'../features/incept_aug1_feat.pkl',\n",
-    "#'../features/incept_aug2_feat.pkl'\n",
-    "#'../features/cnn_3_aug2_feat.pkl'\n",
-    "'../features/resnet_aug2_feat.pkl',\n",
-    "'../features/cnn_4_aug2_feat.pkl',\n",
-    "#'../features/cnn_4_aug1_feat.pkl'\n",
+    "'../features/cnn_2_aug1_feat.pkl',\n",
+    "'../features/cnn_3_aug1_feat.pkl',\n",
+    "'../features/cnn_4_aug1_feat.pkl',\n",
+    "'../features/cnn_4_aug1_feat_add_early.pkl',\n",
+    "'../features/cnn_5_aug1_feat.pkl',\n",
+    "'../features/vgg_aug1_feat.pkl',\n",
+    "'../features/incept_aug2_feat.pkl',\n",
+    "'../features/resnet_aug3_feat.pkl',\n",
+    "    \n",
     "]\n",
     "\n",
     "def load_x_y():\n",
@@ -106,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -122,8 +117,11 @@
     "from sklearn.metrics import log_loss\n",
     "def cv_test(k_cnt=3,rnd=42,save_flag=False):\n",
     "    kf = StratifiedKFold(n_splits=k_cnt, shuffle=True, random_state=rnd*2)\n",
+    "    w_test_pred = None\n",
+    "    r_val_loss = 0\n",
     "    test_pred = None\n",
     "    val_loss = 0\n",
+    "    val_loss_list = []\n",
     "    for train_index, test_index in kf.split(train_x,train_y):\n",
     "        X_train, X_test = train_x[train_index], train_x[test_index]\n",
     "        y_train, y_test = train_y[train_index], train_y[test_index]\n",
@@ -151,26 +149,39 @@
     "                        verbose_eval=100)\n",
     "        \n",
     "        # cal val loss\n",
-    "        val_loss += log_loss(y_test,m.predict(d_valid))/k_cnt\n",
+    "        curr_val_loss = log_loss(y_test,m.predict(d_valid))\n",
+    "        val_loss += curr_val_loss/k_cnt\n",
+    "        val_loss_list.append(curr_val_loss)\n",
+    "        curr_r_val_loss = 1.0 / curr_val_loss\n",
+    "        r_val_loss += curr_r_val_loss\n",
     "        \n",
     "        if test_pred is None:\n",
     "            test_pred = m.predict(d_test)\n",
+    "            w_test_pred = m.predict(d_test)*curr_r_val_loss\n",
     "        else:\n",
     "            curr_pred = m.predict(d_test)\n",
     "            test_pred += curr_pred\n",
+    "            w_test_pred = w_test_pred + curr_pred*curr_r_val_loss\n",
     "\n",
     "    # avg\n",
     "    test_pred = test_pred / k_cnt\n",
+    "    w_test_pred = w_test_pred / r_val_loss\n",
     "    \n",
     "    # train log loss\n",
-    "    print('local average valid loss',val_loss)\n",
+    "    print('local average valid loss',val_loss,'val loss std',np.std(val_loss_list))\n",
     "    if save_flag:\n",
     "        test_df=pd.read_json('../input/test.json')\n",
     "        submission = pd.DataFrame()\n",
     "        submission['id']=test_df['id']\n",
     "        submission['is_iceberg']=test_pred\n",
     "        print(submission.head())\n",
-    "        submission.to_csv('../results/xgb_sub.csv', index=False)\n",
+    "        submission.to_csv('../results/xgb_sub_fold_{}_rnd_{}.csv'.format(k_cnt,rnd), index=False)\n",
+    "        \n",
+    "        submission = pd.DataFrame()\n",
+    "        submission['id']=test_df['id']\n",
+    "        submission['is_iceberg']=w_test_pred\n",
+    "        print(submission.head())\n",
+    "        submission.to_csv('../results/weighted_xgb_sub_fold_{}_rnd_{}.csv'.format(k_cnt,rnd), index=False)\n",
     "\n",
     "    \n",
     "print('def done')"
@@ -178,7 +189,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0]\ttrain-logloss:0.639763\tvalid-logloss:0.643381\n",
+      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
+      "\n",
+      "Will train until valid-logloss hasn't improved in 30 rounds.\n",
+      "[100]\ttrain-logloss:0.094194\tvalid-logloss:0.17904\n",
+      "Stopping. Best iteration:\n",
+      "[101]\ttrain-logloss:0.09382\tvalid-logloss:0.178767\n",
+      "\n",
+      "[0]\ttrain-logloss:0.640312\tvalid-logloss:0.641876\n",
+      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
+      "\n",
+      "Will train until valid-logloss hasn't improved in 30 rounds.\n",
+      "[100]\ttrain-logloss:0.098177\tvalid-logloss:0.158231\n",
+      "Stopping. Best iteration:\n",
+      "[126]\ttrain-logloss:0.084901\tvalid-logloss:0.157481\n",
+      "\n",
+      "[0]\ttrain-logloss:0.640328\tvalid-logloss:0.642502\n",
+      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
+      "\n",
+      "Will train until valid-logloss hasn't improved in 30 rounds.\n",
+      "[100]\ttrain-logloss:0.096753\tvalid-logloss:0.183324\n",
+      "Stopping. Best iteration:\n",
+      "[118]\ttrain-logloss:0.088123\tvalid-logloss:0.181768\n",
+      "\n",
+      "[0]\ttrain-logloss:0.640615\tvalid-logloss:0.642987\n",
+      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
+      "\n",
+      "Will train until valid-logloss hasn't improved in 30 rounds.\n",
+      "[100]\ttrain-logloss:0.098378\tvalid-logloss:0.164931\n",
+      "[200]\ttrain-logloss:0.055533\tvalid-logloss:0.160889\n",
+      "Stopping. Best iteration:\n",
+      "[184]\ttrain-logloss:0.060162\tvalid-logloss:0.159454\n",
+      "\n",
+      "[0]\ttrain-logloss:0.641168\tvalid-logloss:0.640914\n",
+      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
+      "\n",
+      "Will train until valid-logloss hasn't improved in 30 rounds.\n",
+      "[100]\ttrain-logloss:0.098402\tvalid-logloss:0.165613\n",
+      "Stopping. Best iteration:\n",
+      "[88]\ttrain-logloss:0.105447\tvalid-logloss:0.165157\n",
+      "\n",
+      "local average valid loss 0.171129868763 val loss std 0.010627446409\n",
+      "         id  is_iceberg\n",
+      "0  5941774d    0.008957\n",
+      "1  4023181e    0.900247\n",
+      "2  b20200e4    0.035097\n",
+      "3  e7f018bb    0.997962\n",
+      "4  4371c8c3    0.038426\n",
+      "         id  is_iceberg\n",
+      "0  5941774d    0.008784\n",
+      "1  4023181e    0.900677\n",
+      "2  b20200e4    0.035903\n",
+      "3  e7f018bb    0.997969\n",
+      "4  4371c8c3    0.038634\n"
+     ]
+    }
+   ],
+   "source": [
+    "cv_test(5,42,True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {
     "scrolled": false
    },
@@ -187,57 +268,62 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0]\ttrain-logloss:0.63991\tvalid-logloss:0.640629\n",
+      "[0]\ttrain-logloss:0.640909\tvalid-logloss:0.640024\n",
       "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
       "\n",
       "Will train until valid-logloss hasn't improved in 30 rounds.\n",
-      "[100]\ttrain-logloss:0.088423\tvalid-logloss:0.157868\n",
+      "[100]\ttrain-logloss:0.099771\tvalid-logloss:0.152641\n",
       "Stopping. Best iteration:\n",
-      "[98]\ttrain-logloss:0.089674\tvalid-logloss:0.156652\n",
+      "[110]\ttrain-logloss:0.093476\tvalid-logloss:0.150591\n",
       "\n",
-      "[0]\ttrain-logloss:0.64205\tvalid-logloss:0.638257\n",
+      "[0]\ttrain-logloss:0.640652\tvalid-logloss:0.638698\n",
       "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
       "\n",
       "Will train until valid-logloss hasn't improved in 30 rounds.\n",
-      "[100]\ttrain-logloss:0.103817\tvalid-logloss:0.089846\n",
-      "[200]\ttrain-logloss:0.060874\tvalid-logloss:0.074674\n",
-      "[300]\ttrain-logloss:0.038764\tvalid-logloss:0.067539\n",
-      "[400]\ttrain-logloss:0.026554\tvalid-logloss:0.064678\n",
+      "[100]\ttrain-logloss:0.109804\tvalid-logloss:0.113212\n",
+      "[200]\ttrain-logloss:0.065203\tvalid-logloss:0.095043\n",
+      "[300]\ttrain-logloss:0.041004\tvalid-logloss:0.090215\n",
+      "[400]\ttrain-logloss:0.027138\tvalid-logloss:0.08842\n",
       "Stopping. Best iteration:\n",
-      "[381]\ttrain-logloss:0.028774\tvalid-logloss:0.064596\n",
+      "[466]\ttrain-logloss:0.021269\tvalid-logloss:0.085581\n",
       "\n",
-      "[0]\ttrain-logloss:0.640049\tvalid-logloss:0.643524\n",
+      "[0]\ttrain-logloss:0.639568\tvalid-logloss:0.642072\n",
       "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
       "\n",
       "Will train until valid-logloss hasn't improved in 30 rounds.\n",
-      "[100]\ttrain-logloss:0.091347\tvalid-logloss:0.139773\n",
-      "[200]\ttrain-logloss:0.051394\tvalid-logloss:0.136023\n",
+      "[100]\ttrain-logloss:0.095555\tvalid-logloss:0.1597\n",
       "Stopping. Best iteration:\n",
-      "[191]\ttrain-logloss:0.054342\tvalid-logloss:0.134337\n",
+      "[110]\ttrain-logloss:0.090093\tvalid-logloss:0.158126\n",
       "\n",
-      "[0]\ttrain-logloss:0.640858\tvalid-logloss:0.644545\n",
+      "[0]\ttrain-logloss:0.639859\tvalid-logloss:0.644863\n",
       "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
       "\n",
       "Will train until valid-logloss hasn't improved in 30 rounds.\n",
-      "[100]\ttrain-logloss:0.083981\tvalid-logloss:0.198471\n",
+      "[100]\ttrain-logloss:0.089237\tvalid-logloss:0.217207\n",
       "Stopping. Best iteration:\n",
-      "[118]\ttrain-logloss:0.073917\tvalid-logloss:0.194678\n",
+      "[79]\ttrain-logloss:0.101114\tvalid-logloss:0.214146\n",
       "\n",
-      "[0]\ttrain-logloss:0.641126\tvalid-logloss:0.644035\n",
+      "[0]\ttrain-logloss:0.640256\tvalid-logloss:0.642719\n",
       "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
       "\n",
       "Will train until valid-logloss hasn't improved in 30 rounds.\n",
-      "[100]\ttrain-logloss:0.085044\tvalid-logloss:0.183416\n",
+      "[100]\ttrain-logloss:0.092388\tvalid-logloss:0.197273\n",
       "Stopping. Best iteration:\n",
-      "[77]\ttrain-logloss:0.099817\tvalid-logloss:0.182249\n",
+      "[89]\ttrain-logloss:0.098268\tvalid-logloss:0.195221\n",
       "\n",
-      "local average valid loss 0.148525893474\n",
+      "local average valid loss 0.16346439733 val loss std 0.0455986236859\n",
       "         id  is_iceberg\n",
-      "0  5941774d    0.016074\n",
-      "1  4023181e    0.849510\n",
-      "2  b20200e4    0.004522\n",
-      "3  e7f018bb    0.998180\n",
-      "4  4371c8c3    0.084590\n"
+      "0  5941774d    0.008885\n",
+      "1  4023181e    0.873632\n",
+      "2  b20200e4    0.036059\n",
+      "3  e7f018bb    0.997308\n",
+      "4  4371c8c3    0.040388\n",
+      "         id  is_iceberg\n",
+      "0  5941774d    0.008842\n",
+      "1  4023181e    0.866575\n",
+      "2  b20200e4    0.040689\n",
+      "3  e7f018bb    0.997747\n",
+      "4  4371c8c3    0.034109\n"
      ]
     }
    ],
